# lzokay-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  deny.toml  lzokay.pyi  pyproject.toml  wrapper.hpp
.github/workflows/: build.yaml  python.yml
python/tests/: test_native.py
src/: compress.rs  decompress.rs  lib.rs  python.rs  test1.txt  test2.txt
