[package]
name = "lzokay"
version = "2.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/encounter/lzokay-rs"
documentation = "https://docs.rs/lzokay"
readme = "README.md"
description = """
A minimal, MIT-licensed implementation of the LZO compression format.
"""
keywords = ["lzo", "compression", "no_std"]
categories = ["compression", "no-std", "api-bindings"]
rust-version = "1.81.0"

[features]
alloc = ["zerocopy/alloc"]
std = ["alloc", "zerocopy/std"]
decompress = []
compress = []
default = ["compress", "decompress", "std"]

[dependencies]
zerocopy = { version = "0.8.27", default-features = false, features = ["derive"] }
